UPDATE composer to add autoloading to test

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "psr-4": {
       "BristolPhpTraining\\" : "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "BristolPhpTraining\\Test\\" : "test/"
+    }
   }
 }
